# web-gallery_webserver

./: .gitignore  CMakeLists.txt  README.md  build_appimage.sh  crowqt.desktop
.github/workflows/: repo-create_doctoc_md.yml
configure/: CMakeLists.txt  rz_config.hpp.in
docs/: deployment.md
include/: auth_middleware.hpp  db_manager.hpp  image_processor.hpp  metadata_extractor.hpp  rz_config.hpp  utils.hpp
include/controllers/: admin_controller.hpp  auth_controller.hpp  gallery_controller.hpp  upload_controller.hpp  web_controller.hpp
src/: auth_middleware.cpp  db_manager.cpp  image_processor.cpp  main.cpp  metadata_extractor.cpp  utils.cpp
src/controllers/: admin_controller.cpp  auth_controller.cpp  gallery_controller.cpp  upload_controller.cpp  web_controller.cpp
static/: index.html
templates/: template.html
